// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен обогащать ссылки client_id, если роль не клиента 1`] = `
Array [
  Object {
    "active": false,
    "alias": "sales",
    "host": "cabinet",
    "name": "Объявления",
    "submenu": Array [
      Object {
        "active": false,
        "amount": null,
        "cnt": 0,
        "host": "cabinet",
        "name": "Легковые новые",
        "tag": "cars_new",
        "unlim": false,
        "url": "/sales/cars/new/?client_id=123",
      },
      Object {
        "active": false,
        "amount": null,
        "cnt": 0,
        "host": "cabinet",
        "name": "Легковые б/у",
        "tag": "cars_used",
        "unlim": false,
        "url": "/sales/cars/used/?client_id=123",
      },
    ],
  },
  Object {
    "active": false,
    "alias": "calculator",
    "host": "cabinet",
    "name": "Тарифы",
    "url": "/calculator/?client_id=123",
  },
]
`;

exports[`должен проставлять активным и чилдрена и его родителя, если чилдрен активен 1`] = `
Object {
  "active": true,
  "alias": "sales",
  "host": "cabinet",
  "name": "Объявления",
  "submenu": Array [
    Object {
      "active": false,
      "amount": null,
      "cnt": 0,
      "host": "cabinet",
      "name": "Легковые новые",
      "tag": "cars_new",
      "unlim": false,
      "url": "/sales/cars/new/",
    },
    Object {
      "active": true,
      "amount": null,
      "cnt": 0,
      "host": "cabinet",
      "name": "Легковые б/у",
      "tag": "cars_used",
      "unlim": false,
      "url": "/sales/cars/used/",
    },
  ],
}
`;

exports[`роут sales, категория trucks добавит статус активен для элемента подменю и самого меню 1`] = `
Array [
  Object {
    "active": true,
    "alias": "sales",
    "host": "cabinet",
    "name": "Объявления",
    "submenu": Array [
      Object {
        "active": false,
        "amount": null,
        "cnt": 0,
        "host": "cabinet",
        "name": "Легковые новые",
        "tag": "cars_new",
        "unlim": false,
        "url": "/sales/cars/new/",
      },
      Object {
        "active": true,
        "amount": null,
        "cnt": 0,
        "host": "cabinet",
        "name": "Коммерческие",
        "tag": "trucks",
        "unlim": false,
        "url": "/sales/trucks/",
      },
    ],
  },
]
`;
